la version final 0